--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -5,5 +5,5 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Main Activity"/>
+        android:text="Poll Activity"/>
 </android.support.constraint.ConstraintLayout>
