--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -54,4 +54,29 @@
             android:background="@color/colorPrimary"
             android:layout_margin="1dp"/>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_centerHorizontal="true">
+        <TextView
+            android:id="@+id/btn_shuffle"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:text="Suffle"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:id="@+id/btn_skip"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/btn_shuffle"
+            android:text="Skip"
+            android:textAlignment="center"
+            android:layout_margin="2dp"/>
+    </RelativeLayout>
+
 </RelativeLayout>
