상단 탭(홈, 플레이) 추가

--- a/app/src/main/res/layout/heart_list_activity.xml
+++ b/app/src/main/res/layout/heart_list_activity.xml
@@ -1,24 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:orientation="vertical">
-    <TextView
-        android:id="@+id/button_poll"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/tab_menu"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:layout_alignParentRight="true"
-        android:text="poll button"
-        android:textSize="20sp"
-        />
+        android:layout_height="50dp"
+        >
+            <TextView
+                android:id="@+id/btn_add_friends"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="add Friends"
+                android:textSize="20sp"/>
 
+            <TextView
+                android:id="@+id/btn_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Home"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/btn_poll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp"
+                android:text="Play"
+                android:textSize="20sp"/>
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000"/>
     <TextView
         android:id="@+id/answer_sum"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tab_menu"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/answer_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/answer_sum"/>
+</RelativeLayout>
