--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -2,12 +2,46 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/tab_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        >
+        <TextView
+            android:id="@+id/btn_add_friends"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="add Friends"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/btn_poll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Play"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/btn_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
+            android:text="Home"
+            android:textSize="20sp"/>
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/questionTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="25sp"
+        android:layout_below="@id/tab_menu"
         />
 
     <RelativeLayout
